markup, fix indentation issues, nested lists, etc.  Working from most
recent to oldest, I've edited back to release 110.46 (2004/06/17).

//////////////////////////////////////////////////////////////////////

//====================================================================
//== Recent updates

//--------------------------------------------------------------------
[2018/06/15]::
+
Fixed a compiler bug (`arg ty lists wrong length`) in `unifyTy` that
could occur when one of the type constructors is the `ERRORtyc`.
This occurs because the `ERRORtyc` is equal to any other type
constructor, which (incorrectly) implies that the number of type
arguments should be equal.
+
owner:cs.uchicago.edu/~jhr[John Reppy]

//====================================================================
== Version 110.83; 2018/06/01

//--------------------------------------------------------------------
[2018/05/29]::
+
Fixed bugref:206[] (Parsing of explicit type variables and val rec
is broken).  This bug was also bug number 1261 in the old bugs list.
+
owner:cs.uchicago.edu/~jhr[John Reppy]

//--------------------------------------------------------------------
[2018/05/29]::
+
Fixed minor bug in Date.toString (missing leading "0" for day of month).
This issue was bug number 1444 in the old bugs list.
+
owner:cs.uchicago.edu/~jhr[John Reppy]

//--------------------------------------------------------------------
[2018/05/29]::
+
Cleaned up match compiler code (`FLINT/trans/matchcomp.sml`) and added
typing and function comments.  Added debugging and printing
infrastructure, including new `FLINT/trans/mcprint.sml` file, and new
`Control.MC.debugging` flag.
+
owner:cs.uchicago.edu/~dbm[Dave MacQueen]

//--------------------------------------------------------------------
[2018/05/29]::
+
Fixed parser to allow parentheses around `val rec` patterns.
+
owner:cs.uchicago.edu/~jhr[John Reppy]

//--------------------------------------------------------------------
[2018/05/28]::
+